# scene

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SceneConfig.cmake.in  appveyor.yml
cmake/Modules/: FindFreeImage.cmake  Findassimp.cmake
src/: CMakeLists.txt  Object.h  ResourceFormats.h  ResourceManager.cpp  ResourceManagerListener.h  Scene.cpp  Scene.h  SceneListener.h  config.h.in
src/Importer/: Importer.cpp  Importer.h
src/Objects/: Object.h
src/Objects/Camera/: Camera.cpp  Camera.h
src/Objects/Light/: Light.h  Omni.h
src/Resources/: ResourceData.h  ResourceFormats.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerListener.h
src/Volumes/: BoundingBox.h  BoundingSphere.h
